# gameofmpi

./: .clang-tidy  .gitignore  .skipfile  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt
src/life/: CMakeLists.txt  life.cpp
src/life/include/: life.h
src/main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  dtest.cpp  test_life.cpp
